Comṕatibilidade + traduções + ajustes + última versão solidus

--- a/app/views/spree/gdpr_exports_mailer/export_email.html.erb
+++ b/app/views/spree/gdpr_exports_mailer/export_email.html.erb
@@ -1,2 +1,2 @@
-<p>Hello <%= @email %>,</p>
-<p>Attached is the data export you have requested.</p>
+<p><%= t('gdpr.mailer.hello') %> <%= @email %>,</p>
+<p><%= t('gdpr.mailer.warning') %></p>
